# api/handler/register.go
@@ -1,13 +1,5 @@
 package handler
 
-import (
-	"context"
-	"grscan/api/models"
-	"net/http"
-
-	"github.com/gin-gonic/gin"
-)
-
 // VerifyRegister godoc
 // @Router       /verify-register [POST]
 // @Summary      Creates a new verify register
@@ -20,18 +12,18 @@ import (
 // @Failure      400  {object}  models.Response
 // @Failure      404  {object}  models.Response
 // @Failure      500  {object}  models.Response
-func (h Handler) VerifyRegister(c *gin.Context) {
-	createUser := models.CreateRegister{}
-	if err := c.ShouldBindJSON(&createUser); err != nil {
-		handleResponse(c, h.log, "Error while reading body from client", http.StatusBadRequest, err)
-		return
-	}
+// func (h Handler) VerifyRegister(c *gin.Context) {
+// 	createUser := models.CreateRegister{}
+// 	if err := c.ShouldBindJSON(&createUser); err != nil {
+// 		handleResponse(c, h.log, "Error while reading body from client", http.StatusBadRequest, err)
+// 		return
+// 	}
 
-	resp, err := h.services.Register().Verify(context.Background(), createUser)
-	if err != nil {
-		handleResponse(c, h.log, "Error while creating user", http.StatusInternalServerError, err)
-		return
-	}
+// 	resp, err := h.services.Register().Verify(context.Background(), createUser)
+// 	if err != nil {
+// 		handleResponse(c, h.log, "Error while creating user", http.StatusInternalServerError, err)
+// 		return
+// 	}
 
-	handleResponse(c, h.log, "User created successfully", http.StatusCreated, resp)
-}
+// 	handleResponse(c, h.log, "User created successfully", http.StatusCreated, resp)
+// }
